--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
                         <h3 class="hello">Hello, my name is <span class="name">Marklen Mkoyan</span></h3>
                         <h3 class="my-profession">I'm a <span class="typing">Web Developer</span></h3>
                         <p>
-                            I am a Web Developer from Armenia, I enjoy building everything from small business sites to rich interactive web apps.
-                            If you are a business seeking a web presence or an employer looking to hire, you can get in touch with me here.
+                            I am a Web Developer from Armenia, I enjoy building everything from small business sites to
+                            rich interactive web apps.
+                            If you are a business seeking a web presence or an employer looking to hire, you can get in
+                            touch with me here.
                         </p>
                         <a href="#contact" class="btn hire-me">Hire Me</a>
                     </div>
@@ -237,7 +239,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row auto">
                 <!-- ===== Service item Start ===== -->
                 <div class="service-item px-15">
                     <div class="service-item-inner">
@@ -502,7 +504,6 @@
 <!-- ===== JS Files ===== -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
 <script src="js/script.js"></script>
-<script src="js/email.js"></script>
 <script src="js/style-switcher.js"></script>
 </body>
 </html>
