--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                         <p>Age : <span>24</span></p>
                                     </div>
                                     <div class="info-item px-15">
-                                        <p>Website : <span>jhg.com</span></p>
+                                        <p>Website : <a href="http://mmkoyan.netlify.app">mmkoyan.netlify.app</a></p>
                                     </div>
                                     <div class="info-item px-15">
                                         <p>Email : <span>marklen.mkoyan98@gmail.com</span></p>
@@ -368,7 +368,7 @@
                         <h2>Contact Me</h2>
                     </div>
                 </div>
-                <h3 class="contact-title px-15">Have You Any Question ?</h3>
+                <h3 class="contact-title px-15">Do You Have Any Questions ?</h3>
                 <h4 class="contact-sub-title px-15">I'M AT YOUR SERVICES</h4>
                 <div class="row">
                     <!-- ===== Contact Section Start ===== -->
@@ -395,7 +395,7 @@
                             <i class="fa fa-globe-europe"></i>
                         </div>
                         <h4>Website</h4>
-                        <p>www.fdger.com</p>
+                        <a href="http://mmkoyan.netlify.app">mmkoyan.netlify.app</a>
                     </div>
                     <!-- ===== Contact Section End ===== -->
                     <!-- ===== Contact Section Start ===== -->
