--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
                                                 <h3 class="timeline-date">
-                                                    <i class="fa fa-calendar"></i> 2021/05 - Current
+                                                    <i class="fa fa-calendar"></i> 2021/05 - 2022/03
                                                 </h3>
                                                 <h4 class="timeline-title">
                                                     ItHire LLC
