--- a/index.html
+++ b/index.html
@@ -81,29 +81,10 @@
                                     <div class="info-item px-15">
                                         <p>Age : <span>24</span></p>
                                     </div>
-                                    <div class="info-item px-15">
-                                        <p>Website : <a href="http://mmkoyan.netlify.app">mmkoyan.netlify.app</a></p>
-                                    </div>
-                                    <div class="info-item px-15">
-                                        <p>Email : <span>marklen.mkoyan98@gmail.com</span></p>
-                                    </div>
-                                    <div class="info-item px-15">
-                                        <p>Degree : <span>Programmer</span></p>
-                                    </div>
-                                    <div class="info-item px-15">
-                                        <p>Phone : <span>+37477719030</span></p>
-                                    </div>
-                                    <div class="info-item px-15">
-                                        <p>City : <span>Yerevan</span></p>
-                                    </div>
-                                    <div class="info-item px-15">
-                                        <p>Developer : <span>Available</span></p>
-                                    </div>
                                 </div>
                                 <div class="row">
                                     <div class="buttons px-15">
                                         <a href="images/Marklen-Mkoyan-CV.pdf" class="btn">Download CV </a>
-                                        <a href="#contact" class="btn hire me">Hire Me</a>
                                     </div>
                                 </div>
                             </div>
@@ -217,7 +198,8 @@
                                                 <p class="timeline-text">
                                                 <li>Front-End Developer</li>
                                                 Working on Software Development <br>
-                                                Developing Front-End
+                                                Developing Front-End <br>
+                                                Worked with React.js
                                                 </p>
                                             </div>
                                         </div>
